--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
 }
 
 .grid-container{
-
-  
+display: grid;
+  grid-template-areas:
+    "header header header header header header"
+    "menu main main main main main"
+    "menu footer footer footer footer footer";
+  gap: 10px;
+  padding: 10px;
+  margin: 0 auto;  
 }
