--- a/style.css
+++ b/style.css
@@ -47,3 +47,41 @@ display: grid;
     width: 100%;
   }
 }
+
+.header3 {
+  overflow: hidden;
+  background-color: transparent;
+  padding: 0 10px;
+  font-family: didot, sans-serif;
+}
+
+.header3 a.logo {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.header3 a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 20px;
+  position: relative;
+  top: -65px;
+}
+
+.header3 a:hover {
+  background-color: ;
+  color: plum;
+}
+
+.header3 a.active {
+  color: white;
+}
+
+.header-right3 {
+  float: right;
+  background-color: transparent;
+}
