--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ display: grid;
   font-size: 18px;
   line-height: 20px;
   position: relative;
-  top: -100px;
+  margin-top: -100px;
 }
 
 .header a:hover {
