--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ display: grid;
   font-size: 18px;
   line-height: 20px;
   position: relative;
-  margin-top: -70px;
+  margin-top: -10px;
+  margin-right: 40px;
 }
 
 .header a:hover {
