--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ display: grid;
 }
 
 .header a {
-  float: right;
-  color: white;
+  float: left;
+  color: plum;
   text-align: center;
   padding: 12px;
   text-decoration: none;
