--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ display: grid;
   background-color: transparent;
   padding: 0 10px;
   font-family: didot, sans-serif;
+  float: right;
 }
 
 .header a.logo {
@@ -69,7 +70,7 @@ display: grid;
   line-height: 20px;
   position: relative;
   margin-top: -10px;
-  margin-right: 40px;
+  
 }
 
 .header a:hover {
