--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ display: grid;
   padding: 60px;
   margin: 0 auto;}
 
+.grid-container > * {
+  text-align: center;
+  padding: 5px 10px;
+  width: 100%;
+}
+
 .typerwriter {
   display: inline-block;
 }
