--- a/style.css
+++ b/style.css
@@ -97,11 +97,13 @@ display: grid;
 .hello {
   color: plum;
   font-size: 45px;
-  margin-top: -5px;
+  float: right;
+  margin: 10px;
 }
 
 .paragraph {
   color: plum;
   font-size: 28px;
-  margin-top: -1px;
+  float: right;
+  margin: 5px;
 }
