--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ display: grid;
 .hello {
   color: plum;
   font-size: 45px;
-  margin: 15px;
+  margin-bottom: -10px;
 }
 
 .paragraph {
   color: plum;
   font-size: 28px;
-  margin: 15px;
+  margin-bottom: -15px;
 }
