--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ display: grid;
   width: 100%;
 }
 
+main {
+  grid-area: main;
+  margin-top: 20px;
+}
+
 .typerwriter {
   display: inline-block;
 }
