--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body {
 .grid-container{
 display: grid;
   grid-template-areas:
-    "header header header header header header"
-    "menu main main main main main"
-    "menu footer footer footer footer footer";
+    "header header header header header header menu"
+    "main main main main main menu"
+    "footer footer footer footer footer";
   gap: 10px;
   padding: 60px;
   margin: 0 auto;}
