--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ main {
   padding: 10px;
   font-family: "Lucida Console", "Courier New", monospace;
   animation-iteration-count: infinite;
+  float: left;
 }  
 
 
