--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ main {
   margin-top: -10px;
 }
 
+main {
+  grid-area: main;
+  margin-top: 20px;
+}
+
 .typerwriter {
   display: inline-block;
 }
@@ -83,7 +88,7 @@ main {
   font-size: 18px;
   line-height: 20px;
   position: relative;
-  margin-top: -5px;
+  margin-top: -65px;
   
 }
 
@@ -107,11 +112,6 @@ main {
     display: block;
     text-align: left;
   }
-
-  .header-right {
-    float: none;
-  }
-
 
 .hello {
   color: plum;
