--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ main {
   background-color: transparent;
   padding: 0 10px;
   font-family: didot, sans-serif;
- 
+ margin-bottom: 20px;
 }
 
 .header a {
