--- a/style.css
+++ b/style.css
@@ -127,3 +127,10 @@ footer {
   font-size: 45px;
   margin-top: -7%;
 }
+
+.paragraph{
+  color: plum;
+  margin-left: 10%;
+  font-size: 28px;
+  margin-top: -2%;
+}
