--- a/style.css
+++ b/style.css
@@ -123,14 +123,14 @@ footer {
 
 .hello{
   color: plum;
-  margin-left: -10%;
+  margin-right: -10%;
   font-size: 45px;
   margin-top: -7%;
 }
 
 .paragraph{
   color: plum;
-  margin-left: 1%;
+  margin-right: 1%;
   font-size: 28px;
   margin-top: -2%;
 }
